# AC-BO-HACKATHON-2024

./: .gitignore  Embedder.py  Mordred.py  README.md  Untitled.ipynb  acqfunc.yml  analysis.ipynb  analysis.py  basic_training_skeleton.ipynb  data-fingerprint.yml  main.py  main2.py  model.py  notebook.ipynb  params.py  pyproject.toml  requirements.txt  results.csv  results.py  tox21.py  visualize.py  xgboost.py
Fingerprints/: HERG_dataset_final_ECFP.h5  halflife_ECFP.csv
ML_and_DL_models/: jakub-notebook.ipynb
acquistion_functions/: __init__.py  acquisition_function.py  expected_improvement.py  greedy.py  optimize.py  probability_of_improvement.py  random.py  upper_confidence_bound.py
data_loaders/: __init__.py  ames.py  dataset.py  halflife.py  herg.py  ld50.py  tox21.py
dataset_loaders/: dataset.py  tox21.py
datasets/: AMES_dataset.csv  Embedder.py  Mordred.py  README.md  halflife_dataset.csv
datasets/Notebooks/: Data_Preprocessing_AMES.ipynb  Data_Preprocessing_HERG_Central.ipynb  Data_Preprocessing_halflife.ipynb
datasets/fingerprint_datasets/: halflife_ECFP.h5
experiments/: visualize_halflife_dataset.ipynb
featurization/: create_features.py
models/: __init__.py  gaussian_process.py  gaussian_process_model.py  model.py  random_forest.py  xgboost.py  xgboost_model.py
transformer/: __init__.py  fingerprints.py
visualizers/: visualize.py  visualize_model_progress.py
