[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Comparative Analysis of Acquisition Functions in Bayesian Optimization for Drug Discovery"
authors = [
    {name = "Suneel Kumar BVS"},
    {name = "Jan Christopher Spies"},
    {name = "Jakub Lála"},
    {name = "Yunheng Zou"},
    {name = "Luis Walter"},
    {name = "Curtis Chong"}
]
description = ""
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "xgboost",
    "PyTDC",
    "jupyter",
    "ipython",
    "matplotlib",
    "gpytorch",
    "torch",
    "scikit-learn",
    "scipy",
    "mordred",
    "rdkit",
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "arguments-differ",
    "too-many-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "line-too-long",
]